Corrected responsive max-width--not overlapping

--- a/Whittingtonfamreun.css
+++ b/Whittingtonfamreun.css
@@ -181,13 +181,13 @@ header{
     color: #a56c32;
   }
 
-  @media only screen and (max-width: 1410px){
+  @media only screen and (max-width: 1470px){
     .box{
           display: none;
         }
   }
 
-  @media only screen and (max-width: 700px){
+  @media only screen and (max-width: 1470px){
     #Top{
           display: none;
         }
